cambio de helper js

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -15,8 +15,7 @@
   "fileTree": {
     "expandedDirs": [
       "assets/js",
-      "assets",
-      "assets/css"
+      "assets"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -39,7 +38,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
