--- a/prepros-6.config
+++ b/prepros-6.config
@@ -15,7 +15,8 @@
   "fileTree": {
     "expandedDirs": [
       "assets/js",
-      "assets"
+      "assets",
+      "assets/css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -38,7 +39,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
